--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="food-grid" id="food-grid"></div>
         </section>
         
-        <aside class="selected-items">
+        <aside class="selected-items" id="cart-section">
             <div class="section-title">
                 <h2>Tu Pedido</h2>
             </div>
@@ -170,6 +170,14 @@
             </div>
         </div>
     </div>
+
+    <button id="floating-cart-btn" class="floating-cart-btn">
+        <i class="fas fa-shopping-cart"></i>
+        <span class="btn-content">
+            <span id="float-count">0</span> items - <span id="float-total">$0</span>
+        </span>
+        <i class="fas fa-chevron-up"></i>
+    </button>
 
     <script src="./src/js/main.js"></script>
 </body>
