Agrega logo y actualiza estilos: implementa diseño con logo en fondo negro y ajusta estilos generales

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delicias Express - Pedidos por WhatsApp</title>
+    <title>Comidas AMICI - Pedidos por WhatsApp</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/styles.css">
@@ -13,9 +13,12 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <i class="fas fa-utensils"></i>
-                    <div>
-                        <h1>Delicias Express</h1>
+                    <!-- Reemplazo del ícono por la imagen del logo -->
+                    <div class="logo-image">
+                        <img src="./src/assets/logo/logo.png" alt="Comidas AMICI Logo">
+                    </div>
+                    <div class="logo-text">
+                        <h1>Comidas AMICI</h1>
                         <div class="tagline">Pedidos rápidos por WhatsApp</div>
                     </div>
                 </div>
@@ -138,14 +141,16 @@
         <div class="container">
             <div class="footer-content">
                 <div class="logo">
-                    <i class="fas fa-utensils"></i>
-                    <div>
-                        <h1>Delicias Express</h1>
+                    <div class="logo-image">
+                        <img src="./src/assets/logo/logo.png" alt="Comidas AMICI Logo">
+                    </div>
+                    <div class="logo-text">
+                        <h1>Comidas AMICI</h1>
                         <div class="tagline">Comida rápida de calidad</div>
                     </div>
                 </div>
                 <div>
-                    <p>© 2025 Delicias Express. Todos los derechos reservados.</p>
+                    <p>© 2025 Comidas AMICI. Todos los derechos reservados.</p>
                     <p>Envíos a domicilio por WhatsApp</p>
                 </div>
             </div>
