Agrega logo y actualiza estilos: implementa diseño con logo en fondo negro y ajusta estilos generales

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/styles.css">
+    <link rel="stylesheet" href="./src/css/extras.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <!-- Reemplazo del ícono por la imagen del logo -->
                     <div class="logo-image">
                         <img src="./src/assets/logo/logo.png" alt="Comidas AMICI Logo">
                     </div>
@@ -64,7 +64,7 @@
             </div>
             
             <div class="extras-section">
-                <h3 class="extras-title">Adicionales</h3>
+                <h3 class="extras-title">Adicionales Generales</h3>
                 <div class="extra-option">
                     <label class="extra-label">
                         <input type="checkbox" class="extra-checkbox" id="extra-utensils" data-name="Cubiertos descartables" data-price="50">
@@ -185,5 +185,6 @@
     </button>
 
     <script src="./src/js/main.js"></script>
+    <script src="./src/js/extras.js"></script>
 </body>
 </html>
