feat: integrar sistema completo de mapas con 6 módulos JS
- Añadido map-core.js, delivery-calculator.js, etc.
- Implementado cálculo dinámico de costos de envío
- Corregidos errores 404 de archivos JS faltantes
- Mejorada integración con WhatsApp

--- a/index.html
+++ b/index.html
@@ -300,11 +300,19 @@
         <i class="fas fa-chevron-up"></i>
     </button>
 
+    <script src="./src/js/Sistema_Mapas_calculo_envios/map-core.js"></script>
+    <script src="./src/js/Sistema_Mapas_calculo_envios/delivery-calculator.js"></script>
+    <script src="./src/js/Sistema_Mapas_calculo_envios/address-validator.js"></script>
+    <script src="./src/js/Sistema_Mapas_calculo_envios/ui-manager.js"></script>
+    <script src="./src/js/Sistema_Mapas_calculo_envios/whatsapp-integration.js"></script>
+    <script src="./src/js/Sistema_Mapas_calculo_envios/map-styles.js"></script>
+    <script src="./src/js/Sistema_Mapas_calculo_envios/map-init.js"></script>
+
     <!-- SCRIPTS - IMPORTANTE: ORDEN CORRECTO -->
     <script src="./src/js/main.js"></script>
     <script src="./src/js/extras.js"></script>
     <!-- NUEVO: Sistema de mapas y cálculo de rutas -->
-    <script src="./src/js/map.js"></script>
+    <!-- <script src="./src/js/map.js"></script> -->
     <!-- Sistema de formulario (depende de map.js) -->
     <script src="./src/js/form.js"></script>
     
