SEO y minimizacion de js y css

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <link rel="stylesheet" href="./src/css/extras.css">
     <link rel="stylesheet" href="./src/css/form.css">
     <link rel="stylesheet" href="./src/css/map.css">
+    <link rel="shortcut icon" href="./src/assets/logo/logo.png" type="image/x-icon">
 </head>
 <body>
     <header>
